--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,14 +25,14 @@
   flex-direction: column;
 }
 
-input {
+.login-text {
   margin: 10px 0;
   padding: 10px;
   border-radius: 4px;
   border: 1px solid #ccc;
 }
 
-button {
+.login-button {
   padding: 10px;
   border: none;
   border-radius: 4px;
@@ -42,6 +42,6 @@ button {
   margin-top: 10px;
 }
 
-button:hover {
+.login-button-style:hover {
   background-color: #2980b9;
 }
